Add JDA connexion and meet some trouble

--- a/resources.json.example
+++ b/resources.json.example
@@ -1,7 +1,8 @@
 {
   "tokens":{
     "discord":"SECRET",
-    "slack":"SECRET"
+    "slack":"SECRET",
+    "guildId":"SECRET"
   },
   "commands":["roll", "help"],
   "autoresponses":[
