Jumping from JDA to Discord4J

--- a/resources.json.example
+++ b/resources.json.example
@@ -1,7 +1,7 @@
 {
   "tokens":{
     "discord":"SECRET",
-    "slack":"SECRET"
+    "slack":"SECRET",
     "guildId":"SECRET"
   },
   "chatBridgeConfig":[
