--- a/build.gradle
+++ b/build.gradle
@@ -7,15 +7,14 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    repositories {
-        maven {
-            url  "http://dl.bintray.com/dv8fromtheworld/maven"
-        }
+    jcenter() //This prevents issues with transitive dependencies
+    maven {
+        url  "https://jitpack.io"
     }
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile 'net.dv8tion:JDA:3.0.0_169'
-    compile group: 'org.json', name: 'json', version: '20090211'
+    compile group: 'org.json', name: 'json', version: '20160810'
+    compile "com.github.austinv11:Discord4j:2.7.0"
 }
