--- a/build.gradle
+++ b/build.gradle
@@ -17,4 +17,5 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.json', name: 'json', version: '20160810'
     compile "com.github.austinv11:Discord4j:2.7.0"
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
 }
